<resources>
    <string name="app_name">UEFA</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="euro_2016">Euro 2016</string>
    <string name="choose_your_team">Sélectionnez votre équipe favorite</string>

    <string name="no_internet_connection">Vous n\'êtes pas connecté a Internet  :(</string>

    <!-- NavigationView-->
    <string name="nav_news">Actualités</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_history">Histoire</string>
    <string name="nav_players">Effectif</string>
    <string name="nav_ranking">Classement</string>
    <string name="nav_live">Live!</string>
    <string name="nav_bet_history">Historique des paris</string>
    <string name="nav_bets">Paris en ligne</string>
    <string name="nav_disconnection">Déconnexion</string>

    <!--Login-->
    <string name="login_hint">Login</string>
    <string name="password_hint">Mot de passe</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="forgot_password_email_hint">Entrez votre adresse e-mail</string>
    <string name="forgot_password_send">Envoyer</string>
    <string name="forgot_password_cancel">Annuler</string>
    <string name="register">S\'enregistrer</string>
    <string name="connection">Connexion</string>
    <string name="err_msg_email">Entrez une adresse mail valide</string>
    <string name="err_msg_password">Entrez un mot de passe</string>
    <string name="err_msg_email_length">Ce champs doit contenir entre 5 et 40 caractères</string>
    <string name="err_msg_password_length">Ce champs doit contenir entre 6 et 20 caractères</string>
    <string name="validate">Valider</string>

    <!-- Team Selection -->
    <string-array name="countries">
        <item>Albanie</item>
        <item>Allemagne</item>
        <item>Angleterre</item>
        <item>Autriche</item>
        <item>Belgique</item>
        <item>Croatie</item>
        <item>Espagne</item>
        <item>France</item>
        <item>Hongrie</item>
        <item>Irlande du Nord</item>
        <item>Islande</item>
        <item>Italie</item>
        <item>Pays de Galles</item>
        <item>Pologne</item>
        <item>Portugal</item>
        <item>République d\'Irelande</item>
        <item>Rép. tchèque</item>
        <item>Roumanie</item>
        <item>Russie</item>
        <item>Slovaquie</item>
        <item>Suède</item>
        <item>Suisse</item>
        <item>Turquie</item>
        <item>Ukraine</item>
    </string-array>

    <!-- Team Home -->
    <string name="disconnection">Déconnexion</string>
    <string name="change_team">Changer d\'équipe</string>
    <string name="change_password">Changer mot de passe</string>
    <string name="hint_team_name">Nom de l\'équipe favorite</string>
    <string name="history">Histoire</string>
    <string name="players">Effectif</string>
    <string name="ranking">Classement</string>
    <string name="live">Live!</string>
    <string name="bet_history">Historique des paris</string>
    <string name="bet">Paris en ligne</string>


    <!-- Team History -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>


    <!-- Team Players -->
    <string name="name">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="number">N°</string>
    <string name="age">Age</string>
    <string name="position">Position</string>


    <!-- RankingFragment -->
    <!-- First ViewPager -->
    <string name="day">Journée</string>

    <!-- Second ViewPager -->
    <string name="classement">Classement</string>

    <!--Third ViewPager -->
    <string name="strikers_passers">Buteurs et passeurs</string>


    <!-- Live -->
    <string name="events_notifications">Notifications des évènements</string>

    <!-- Pari en ligne -->
    <string name="bet_country_prompt">Choisir une équipe</string>
    <string-array name="bet_score_entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="money_bet">Somme misée</string>
    <string name="bet_button">Parier</string>
    <string name="credits_wagered">Crédits restants : </string>

</resources>
