<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_players"
            android:title="@string/nav_players" />
        <item
            android:id="@+id/nav_ranking"
            android:title="@string/nav_ranking" />
        <item
            android:id="@+id/nav_live"
            android:title="@string/nav_live" />
        <item
            android:id="@+id/nav_bets"
            android:title="@string/nav_bets" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_disconnect"
            android:title="@string/nav_disconnection" />
    </group>

</menu>
