<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.TeamHomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_disconnect_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:text="@string/disconnection"
            style="@android:style/Widget.Material.Light.Button.Borderless"/>

        <Button
            android:id="@+id/button_change_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:text="@string/change_team"
            style="@android:style/Widget.Material.Light.Button.Borderless"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/team_home_title_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/team_home_nation_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/hint_team_name"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/team_home_image_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/team_home_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            tools:src="@drawable/croatia"/>

    </LinearLayout>


    <!-- Bottom textview container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:layout_gravity="bottom"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <!-- First row  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_team_history"
                    android:layout_width="@dimen/button_dimen"
                    android:layout_height="wrap_content"
                    android:text="@string/history"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_team_players"
                    android:layout_width="@dimen/button_dimen"
                    android:layout_height="wrap_content"
                    android:text="@string/players"/>

            </LinearLayout>

        </LinearLayout>


        <!-- Second row  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_team_ranking"
                    android:layout_width="@dimen/button_dimen"
                    android:layout_height="wrap_content"
                    android:text="@string/ranking"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_team_live_events"
                    android:layout_width="@dimen/button_dimen"
                    android:layout_height="wrap_content"
                    android:text="@string/live"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Third row  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_team_bet_history"
                    android:layout_width="@dimen/button_dimen"
                    android:layout_height="wrap_content"
                    android:text="@string/bet_history"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_online_bets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bet"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>