<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#5868A7"
        android:alpha="0.80">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@android:color/white"/>

        <!--Login-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_mail_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:background="@drawable/round_corners"/>

        </LinearLayout>

        <!--Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_new_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                android:maxLines="1"
                android:padding="12dp"
                android:background="@drawable/round_corners"/>

        </LinearLayout>

        <!--Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                android:maxLines="1"
                android:padding="12dp"
                android:background="@drawable/round_corners"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!--Cancel Button-->
            <Button
                android:id="@+id/register_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="24dp"
                android:text="@string/forgot_password_cancel"/>

            <!--Register Button-->
            <Button
                android:id="@+id/register_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="24dp"
                android:text="@string/register"/>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/login_progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            style="?android:attr/progressBarStyleLargeInverse"
            android:indeterminate="true"
            android:layout_marginTop="36dp"
            android:visibility="invisible"/>
    </LinearLayout>
</RelativeLayout>