<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/team_bet_title_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:text="@string/bet"
                android:textStyle="bold"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <Spinner
                    android:id="@+id/team_bet_team_match"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/bet_country_prompt"
                    style="@android:style/Widget.Material.Spinner"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:alpha=".3"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Score "
                android:textSize="36sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_horizontal_margin"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="16dp">

                <Spinner
                    android:id="@+id/team_bet_score_team_1_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    android:spinnerMode="dropdown"
                    android:entries="@array/bet_score_entries"
                    style="@android:style/Widget.Material.Spinner"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text=" - "
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_horizontal_margin"/>

                <Spinner
                    android:id="@+id/team_bet_score_team_2_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    android:spinnerMode="dropdown"
                    android:entries="@array/bet_score_entries"
                    style="@android:style/Widget.Material.Spinner"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_bet"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/team_bet_money_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:ems="6"
                android:inputType="number"
                android:layout_margin="24dp"/>

            <Button
                android:id="@+id/team_bet_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bet_button"
                android:textSize="18sp"
                android:padding="16dp"
                android:layout_margin="16dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>